[gd_scene load_steps=7 format=3 uid="uid://x0di6ow8xbtg"]

[ext_resource type="StyleBox" uid="uid://cq0paplwjyeto" path="res://ui/levelSpezialItemsDisplay.tres" id="1_e60c4"]
[ext_resource type="Script" path="res://ui/levelDetails/levelDetails.gd" id="1_i825i"]
[ext_resource type="Texture2D" uid="uid://duyc66ghlyvjq" path="res://asset/ui/gem.png" id="3_rq7bb"]
[ext_resource type="Texture2D" uid="uid://05lrthggrwfk" path="res://asset/ui/MonedaR.png" id="4_u37hw"]
[ext_resource type="Texture2D" uid="uid://ce20rr8rjyd62" path="res://asset/ui/cat ui test.png" id="5_jt5ps"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_us2eg"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="levelDetails" type="CanvasLayer"]
layer = 9
script = ExtResource("1_i825i")

[node name="Panel" type="Panel" parent="."]
offset_left = 488.0
offset_top = 45.0
offset_right = 620.0
offset_bottom = 266.0
scale = Vector2(2, 2)
theme_override_styles/panel = SubResource("StyleBoxFlat_us2eg")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Title" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="Label" type="Label" parent="Panel/VBoxContainer/Title"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Wood 1"

[node name="Gems" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="GemPanel" type="Panel" parent="Panel/VBoxContainer/Gems"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = ExtResource("1_e60c4")

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/Gems/GemPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 13
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 13

[node name="Gems" type="HBoxContainer" parent="Panel/VBoxContainer/Gems/GemPanel/MarginContainer"]
layout_mode = 2

[node name="gem1" type="TextureRect" parent="Panel/VBoxContainer/Gems/GemPanel/MarginContainer/Gems"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("3_rq7bb")
expand_mode = 2

[node name="gem2" type="TextureRect" parent="Panel/VBoxContainer/Gems/GemPanel/MarginContainer/Gems"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("3_rq7bb")
expand_mode = 2

[node name="gem3" type="TextureRect" parent="Panel/VBoxContainer/Gems/GemPanel/MarginContainer/Gems"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("3_rq7bb")
expand_mode = 2

[node name="gem4" type="TextureRect" parent="Panel/VBoxContainer/Gems/GemPanel/MarginContainer/Gems"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("3_rq7bb")
expand_mode = 2

[node name="gem5" type="TextureRect" parent="Panel/VBoxContainer/Gems/GemPanel/MarginContainer/Gems"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("3_rq7bb")
expand_mode = 2

[node name="RedCoins" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="RedCoinPanel" type="Panel" parent="Panel/VBoxContainer/RedCoins"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = ExtResource("1_e60c4")

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/RedCoins/RedCoinPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 13
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 13

[node name="RedCoins" type="HBoxContainer" parent="Panel/VBoxContainer/RedCoins/RedCoinPanel/MarginContainer"]
layout_mode = 2

[node name="redCoin1" type="TextureRect" parent="Panel/VBoxContainer/RedCoins/RedCoinPanel/MarginContainer/RedCoins"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("4_u37hw")
expand_mode = 2

[node name="redCoin2" type="TextureRect" parent="Panel/VBoxContainer/RedCoins/RedCoinPanel/MarginContainer/RedCoins"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("4_u37hw")
expand_mode = 2

[node name="redCoin3" type="TextureRect" parent="Panel/VBoxContainer/RedCoins/RedCoinPanel/MarginContainer/RedCoins"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("4_u37hw")
expand_mode = 2

[node name="redCoin4" type="TextureRect" parent="Panel/VBoxContainer/RedCoins/RedCoinPanel/MarginContainer/RedCoins"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("4_u37hw")
expand_mode = 2

[node name="redCoin5" type="TextureRect" parent="Panel/VBoxContainer/RedCoins/RedCoinPanel/MarginContainer/RedCoins"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("4_u37hw")
expand_mode = 2

[node name="Cats" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="RedCoinPanel" type="Panel" parent="Panel/VBoxContainer/Cats"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = ExtResource("1_e60c4")

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/Cats/RedCoinPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 13
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 13

[node name="Cats" type="HBoxContainer" parent="Panel/VBoxContainer/Cats/RedCoinPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="cat1" type="TextureRect" parent="Panel/VBoxContainer/Cats/RedCoinPanel/MarginContainer/Cats"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture = ExtResource("5_jt5ps")
expand_mode = 2

[node name="cat2" type="TextureRect" parent="Panel/VBoxContainer/Cats/RedCoinPanel/MarginContainer/Cats"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture = ExtResource("5_jt5ps")
expand_mode = 2

[node name="cat3" type="TextureRect" parent="Panel/VBoxContainer/Cats/RedCoinPanel/MarginContainer/Cats"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture = ExtResource("5_jt5ps")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="Button" type="Button" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Start"

[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer/Button" to="." method="_on_button_pressed"]
